# kagent-workshop

./: CLAUDE.md  CODEOWNERS
.github/workflows/: groundplan.yml  scenarios-ci.yml
light-manager/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README-deploy.md  README.md
light-manager/backend/: pyproject.toml
light-manager/backend/app/: db.py  main.py  models.py  seed.py  spa.py
light-manager/backend/app/routers/: bulbs.py  state.py  users.py
light-manager/backend/tests/: conftest.py  test_api_bulbs.py  test_api_state.py  test_api_users.py  test_health.py  test_models.py  test_seed.py
light-manager/bmad/: config.yaml
light-manager/docs/: bmm-workflow-status.yaml  product-brief-light-manager-2026-04-20.md  sprint-plan-light-manager-2026-04-20.md  sprint-status.yaml  tech-spec-light-manager-2026-04-20.md
light-manager/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
light-manager/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
operators-secret/: .dockerignore  Dockerfile  README.md  eslint.config.ts  package-lock.json  package.json
operators-secret/.helm/: Chart.yaml  values.yaml
operators-secret/.storybook/: main.ts  preview.tsx
operators-secret/components/: Button.css  Button.stories.tsx  Button.tsx  Modal.css  Modal.stories.tsx  Modal.tsx  OperatorCard.css  OperatorCard.stories.tsx  OperatorCard.tsx  OperatorDetailModal.css  OperatorDetailModal.stories.tsx  OperatorDetailModal.tsx  TextInput.css  TextInput.stories.tsx  TextInput.tsx  tokens.css
operators-secret/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
operators-secret/pages/: +Layout.tsx  +config.ts
operators-secret/server/: create-todo-handler.ts  operators.ts
scenarios/: .gitignore  DISTRIBUTION.md  Makefile  README.md  TESTING.md
scenarios/apps/: README.md
scenarios/apps/_skeleton/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
scenarios/apps/lunar-rover-telemetry/: Dockerfile  README.md  main.py  pyproject.toml
scenarios/apps/mission-control/: Dockerfile  README.md  main.py  pyproject.toml
scenarios/bmad/: config.yaml
scenarios/docs/: architecture-kagent-workshop-scenarios-2026-04-28.md  artemis-naming.md  bmm-workflow-status.yaml  dry-run-journal-2026-05-05.md  prd-kagent-workshop-scenarios-2026-04-27.md  product-brief-kagent-workshop-scenarios-2026-04-27.md  sprint-plan-kagent-workshop-scenarios-2026-04-28.md  sprint-status.yaml  tour-content-conventions.md
scenarios/mcp/: Dockerfile  README.md  kmcp.yaml  pyproject.toml
scenarios/schemas/: README.md  workshop-tour.schema.json
(+135 files in other folders)
