# apps/_skeleton/pyproject.toml — FastAPI app skeleton (FR-007).
# Each app variant under apps/<name>/ keeps the same shape and only changes
# `[project].name` + the default APP_IDENTITY in main.py.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kagent-workshop-skeleton"
version = "0.1.0"
description = "FastAPI app skeleton for kagent-workshop-scenarios — copy this directory to start a new variant."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[tool.setuptools]
py-modules = ["main"]
