# apps/lunar-rover-telemetry/pyproject.toml — UC3 + UC4 source app variant (FR-007).
# Forked from apps/_skeleton/. Adds prometheus-fastapi-instrumentator for /metrics.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kagent-workshop-lunar-rover-telemetry"
version = "0.1.0"
description = "UC3 + UC4 FastAPI app for kagent-workshop-scenarios — Artemis 'lunar-rover-telemetry' identity, with /leak and /metrics."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "prometheus-fastapi-instrumentator>=7.0,<8",
]

[tool.setuptools]
py-modules = ["main"]
